# mc_kortex

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
etc/: sample.yaml
scripts/: download_kortex_api.sh
src/: CMakeLists.txt  KinovaControlLoop.cpp  KinovaControlLoop.h  KinovaRobot.cpp  KinovaRobot.h  main.cpp  mc_kortex.cpp  mc_kortex.h
